--- a/11 - Random Forests/Random Forests.ipynb
+++ b/11 - Random Forests/Random Forests.ipynb
@@ -88,7 +88,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:12:47.075506Z",
+     "start_time": "2018-11-27T09:12:46.477609Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -124,7 +129,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:13:51.559986Z",
+     "start_time": "2018-11-27T09:13:48.374409Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -184,7 +194,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:17:06.775919Z",
+     "start_time": "2018-11-27T09:17:06.394265Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# A more demonstrative example\n",
@@ -222,7 +237,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:19:11.874120Z",
+     "start_time": "2018-11-27T09:19:02.504730Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -238,7 +258,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:19:13.557877Z",
+     "start_time": "2018-11-27T09:19:13.543027Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Xtrain.shape"
@@ -255,7 +280,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:26:03.448038Z",
+     "start_time": "2018-11-27T09:25:20.673603Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
@@ -274,7 +304,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:26:28.312898Z",
+     "start_time": "2018-11-27T09:26:28.308209Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -283,7 +318,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:26:41.259828Z",
+     "start_time": "2018-11-27T09:26:37.565331Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code2.py\n",
@@ -301,7 +341,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:26:48.141558Z",
+     "start_time": "2018-11-27T09:26:46.419354Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Retrain\n",
@@ -313,7 +358,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:26:51.285677Z",
+     "start_time": "2018-11-27T09:26:51.172680Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Find misclassified examples\n",
@@ -328,7 +378,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:27:00.575876Z",
+     "start_time": "2018-11-27T09:27:00.570847Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
@@ -339,7 +394,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:27:10.571664Z",
+     "start_time": "2018-11-27T09:27:10.525840Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Check some misclassified mails\n",
@@ -361,7 +421,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:27:54.702954Z",
+     "start_time": "2018-11-27T09:27:54.045226Z"
+    }
+   },
    "outputs": [],
    "source": [
     "importances = spam_RF.feature_importances_\n",
@@ -389,7 +454,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:28:40.205991Z",
+     "start_time": "2018-11-27T09:28:39.993169Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -431,7 +501,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:29:14.758622Z",
+     "start_time": "2018-11-27T09:29:14.076187Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -477,7 +552,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:29:54.490669Z",
+     "start_time": "2018-11-27T09:29:53.903119Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Retrain\n",
@@ -492,7 +572,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:29:59.903442Z",
+     "start_time": "2018-11-27T09:29:59.757516Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Examples\n",
@@ -508,7 +593,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:30:15.804969Z",
+     "start_time": "2018-11-27T09:30:15.758972Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Find misclassified examples\n",
@@ -523,7 +613,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:30:16.822120Z",
+     "start_time": "2018-11-27T09:30:16.699822Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Display misclassified examples\n",
@@ -544,7 +639,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:30:47.066251Z",
+     "start_time": "2018-11-27T09:30:46.591475Z"
+    }
+   },
    "outputs": [],
    "source": [
     "importances = digits_rf.feature_importances_\n",
@@ -568,7 +668,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T09:31:04.046292Z",
+     "start_time": "2018-11-27T09:31:03.940151Z"
+    }
+   },
    "outputs": [],
    "source": [
     "importances_image = importances.reshape((8,8))\n",
@@ -600,6 +705,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "218px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
