--- a/6 - Artificial Neural Networks/Artificial neural networks.ipynb
+++ b/6 - Artificial Neural Networks/Artificial neural networks.ipynb
@@ -187,7 +187,7 @@
     "- second hidden layer with 3 sigmoid neurons\n",
     "- one ouput layer with an identity neuron\n",
     "\n",
-    "Let's initialize it's weights randomly (following a $\\mathcal{N}(0,1)$ distribution)."
+    "Let's initialize its weights randomly (following a $\\mathcal{N}(0,1)$ distribution)."
    ]
   },
   {
