improved SVM notebook and fixed formatting in all notebooks

--- a/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
@@ -38,7 +38,7 @@
     "    1. [Spam or ham?](#sec8-1)\n",
     "    2. [NIST](#sec8-2)\n",
     "\n",
-    "<div class=\"alert alert-success\">**In a nutshell:**\n",
+    "<div class=\"alert alert-success\"><b>In a nutshell:</b>\n",
     "<ul>\n",
     "<li> Support Vector Machines try to separate data by maximizing a geometrical margin\n",
     "<li> They are computed offline\n",
@@ -104,7 +104,7 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-warning\">**Question (collective answer)**<br>\n",
+    "<div class=\"alert alert-warning\"><b>Question (collective answer)</b><br>\n",
     "<ul>\n",
     "<li> What constitutes a \"good\" separating line between red and blue dots?\n",
     "<li> What about the lines below?\n",
@@ -153,7 +153,7 @@
    "source": [
     "The best separating hyperplane is the one that maximizes the distance to the closest points.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Question**<br>\n",
+    "<div class=\"alert alert-warning\"><b>Question</b><br>\n",
     "Suppose $w$ is the hyperplane's normal vector, $w_0$ is its intercept, and $\\|w\\|=1$. What is the expression of this distance?\n",
     "</div>"
    ]
@@ -166,7 +166,7 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-danger\"><a href=\"#answer1\" data-toggle=\"collapse\">**Ready to see the answer? (click to expand)**</a><br>\n",
+    "<div class=\"alert alert-danger\"><a href=\"#answer1\" data-toggle=\"collapse\"><b>Ready to see the answer? (click to expand)</b></a><br>\n",
     "<div id=\"answer1\" class=\"collapse\">\n",
     "\n",
     "Let's write $M$ this distance and call it **the margin**.\n",
@@ -175,7 +175,7 @@
     "</div>\n",
     "</div>\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Question**<br>\n",
+    "<div class=\"alert alert-warning\"><b>Question</b><br>\n",
     "What is the margin of the dark green line in the example above?\n",
     "</div>\n",
     "To answer this question, recall that given a hyperplane of equation $w^Tx + w_0=0$, with $\\|w\\|=1$, the (signed) distance between $x_i$ and the hyperplane is precisely $w^Tx_i + w_0$."
@@ -186,8 +186,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T08:52:43.627053Z",
-     "start_time": "2018-10-22T08:52:43.620712Z"
+     "end_time": "2018-12-06T10:29:12.108817Z",
+     "start_time": "2018-12-06T10:29:12.087659Z"
     },
     "nbpresent": {
      "id": "a077da5d-794e-45b6-8349-db14f8f26612"
@@ -216,7 +216,9 @@
     "$$\\|w\\| = 1$$\n",
     "Let's use some optimization routines for that.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice**<br>\n",
     "The `fmin_slsqp` function from `scipy.optimize` solves constrained non-linear optimization problems by sequential least squares programming. It takes as inputs:\n",
     "<ul>\n",
     "<li> a function `func` of variable vector `x`,\n",
@@ -256,7 +258,9 @@
    "source": [
     "We can simplify the optimization problem above.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Use the variable change $w' = \\frac{w}{M}$ and $w'_0 = \\frac{w_0}{M}$ to get rid of $M$ in the optimization problem above.\n",
     "</div>"
    ]
@@ -269,7 +273,9 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-danger\"><a href=\"#answer2\" data-toggle=\"collapse\">**Ready to see the answer? (click to expand)**</a><br>\n",
+    "<div class=\"alert alert-danger\"><a href=\"#answer2\" data-toggle=\"collapse\">\n",
+    "\n",
+    "**Ready to see the answer? (click to expand)**</a><br>\n",
     "<div id=\"answer2\" class=\"collapse\">\n",
     "We have $w=M w'$ and $w_0 = M w'_0$, so the problem becomes:\n",
     "$$\\max_{M,w',w'_0} M$$\n",
@@ -386,7 +392,9 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-success\">**Overall:**<br>\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "**Overall:**<br>\n",
     "$$w = \\sum\\limits_{i=1}^N \\alpha_i y_i x_i$$\n",
     "The $x_i$ for which $\\alpha_i>0$ are called **Support Vectors**. They lay on the margin's boundary.\n",
     "</div>\n",
@@ -462,12 +470,16 @@
     "\n",
     "<img width=\"300px\" src=\"attachment:non_lin_sep3.png\">\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Let's write $y_i(w^T x_i + w_0) \\geq M(1-\\xi_i)$ and note that $x_i$ is misclassified if $\\xi_i\\geq1$.\n",
     "Reformulate the SVM optimization problem so that we have a maximum of $K$ misclassifications.\n",
     "</div>\n",
     "\n",
-    "<div class=\"alert alert-danger\"><a href=\"#answer3\" data-toggle=\"collapse\">**Ready to see the answer? (click to expand)**</a><br>\n",
+    "<div class=\"alert alert-danger\"><a href=\"#answer3\" data-toggle=\"collapse\">\n",
+    "    \n",
+    "**Ready to see the answer? (click to expand)**</a><br>\n",
     "<div id=\"answer3\" class=\"collapse\">\n",
     "The problem simply turns into:\n",
     "$$\\min_{w,w_0} \\frac{1}{2}\\|w\\|^2$$\n",
@@ -596,7 +608,9 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice**<br>\n",
     "Try different values for $C$ in the code above to see how the margin's boundaries evolve.\n",
     "</div>\n",
     "\n",
@@ -754,7 +768,9 @@
    "source": [
     "It does not look like a linear separation even makes sense. But let's try nonetheless, some optimal separating hyperplane must exist (even if it does not have great generalization properties).\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Use scikit-learn to compute a linear Support Vector Classifier for the data above. Compute the classification score and conclude on the limits of this approach.\n",
     "</div>"
    ]
@@ -787,6 +803,21 @@
    },
    "source": [
     "Quite unconvincing, isn't it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A short metaphor before we go into more details**\n",
+    "\n",
+    "<img src=\"img/crumpled-paper.jpg\" width=\"400px\"></img>\n",
+    "\n",
+    "Take two blank sheets of paper. On the first one, draw a set of blue points. On the second, draw some red points. Now put one page on top of the other and crumple them together. The red and blue points are separable (whatever number of points there were on each sheet) , it's a certainty, since you put them on purpose on two different pieces of paper (two classes). But if you're given the current coordinates of each point, then building a relevant classifier might not be so easy. Some ideas follow from this intuition:\n",
+    "- Good classification might be feasible if we could build an inverse transformation (\"uncrumpling\") of the data that makes it linearly separable.\n",
+    "- Good classification functions should be able to approximate a large variety of geometric transformations of the data (this inverse transformation should be able to capture a large variety of of crumpling patterns).\n",
+    "- A classification method that can only approximate a few geometrical transformations is prone to miss the structure of the data. We call that *underfitting*, which is due to *high bias* in the family of classification functions.\n",
+    "- Having a large set of uncrumpling patterns (being able to approximate many geometrical transformations of the data) comes at the price of taking the risk of picking the wrong uncrumpling pattern given the finite amount of data at our disposal. We call that *overfitting*, which is due to *high variance* in the family of classification functions."
    ]
   },
   {
@@ -889,7 +920,9 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-warning\">**Question:**<br>Does it look like these data are linearly separable?</div>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question:**<br>Does it look like these data are linearly separable?</div>\n",
     "<br>\n",
     "Some well-experienced engineer already knows that $U$ is no good criterion to split the data points into two categories with a single threshold (recall: in dimension 1, a hyperplane is a threshold). He also knows that other indicators like $V = (U-2)^2$ are not any better, but that the pair $(U,V)$ actually allows to build a separating line between points."
    ]
@@ -976,7 +1009,9 @@
     "- polynomial $K(x,y)=\\left(1+\\langle x, y\\rangle\\right)^d$\n",
     "- sigmoid $K(x,y) = \\tanh\\left(\\kappa_1 \\langle x, y\\rangle + \\kappa_2\\right)$\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice (off-class):**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice (off-class):**<br>\n",
     "Check for yourself that the dual optimization problem for the SVM in the kernel's Hilbert space can be written:\n",
     "$$\\max\\limits_{\\alpha\\in{\\mathbb{R}^+}^N} L_D(\\alpha) = \\sum\\limits_{i=1}^N \\alpha_i - \\frac{1}{2}\\sum\\limits_{i=1}^N\\sum\\limits_{j=1}^N \\alpha_i \\alpha_j y_i y_j K(x_i,x_j)$$\n",
     "$$\\text{such that } \\sum\\limits_{i=1}^N \\alpha_i y_i = 0$$\n",
@@ -1046,7 +1081,9 @@
    "source": [
     "A lot better isn't it? Let's play a little with the value of $C$.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Let's see how that SVM with the rbf kernel would do on the data from the beginning of this notebook.\n",
     "</div>"
    ]
@@ -1079,7 +1116,9 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "And on the \"linearly separable + noise\" case?\n",
     "</div>"
    ]
@@ -1180,7 +1219,9 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-success\">**In a nutshell:**\n",
+    "<div class=\"alert alert-success\">\n",
+    "    \n",
+    "**In a nutshell:**\n",
     "<ul>\n",
     "<li> Support Vector Machines for classification try to separate data by maximizing a geometrical margin\n",
     "<li> They are computed offline\n",
@@ -1211,7 +1252,9 @@
     "\n",
     "## <a id=\"sec8-1\"></a>8.1 Spam or ham?\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "Your turn to play: let's build a spam classifier using the ling-spam dataset and a linear SVM. Compute it's score on the validation dataset below.\n",
     "</div>"
    ]
@@ -1277,7 +1320,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:**<br>\n",
     "We've trained our model in the Tf-Idf data. Let's see how the model behaves on raw word counts.\n",
     "</div>"
    ]
@@ -1317,7 +1362,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Exercice:** Want to try another kernel than linear?</div>"
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Exercice:** Want to try another kernel than linear?</div>"
    ]
   },
   {
@@ -1699,7 +1746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
