--- a/Practice/Gaussian Processes/Gaussian Process Regression.ipynb
+++ b/Practice/Gaussian Processes/Gaussian Process Regression.ipynb
@@ -128,7 +128,9 @@
    "source": [
     "## Exercice 1:\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Question 1.1**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 1.1**<br>\n",
     "Code the function that predicts the mean and the standard deviation of the Gaussian process.\n",
     "</div>"
    ]
@@ -152,7 +154,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Question 1.2**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 1.2**<br>\n",
     "Test several values of $\\theta = [l, \\sigma_f]$ with  $l$ defined as the length-scale  (of oscillations) and  $\\sigma_f$ the amplitude. Look at the RMSE and R2 score that give an information on the accuracy of the model. RMSE must be close to 0 and R2 must be close to 1. For a reminder about these metrics, you can refer to https://en.wikipedia.org/wiki/Root-mean-square_deviation and https://en.wikipedia.org/wiki/Coefficient_of_determination.\n",
     "</div>"
    ]
@@ -244,7 +248,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Question 1.3**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 1.3**<br>\n",
     "Conclude: Is there a way to find a $\\theta_{optimal} = \\theta^*$?\n",
     "</div>"
    ]
@@ -260,7 +266,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert-danger\"><a href=\"#answers1-3\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div class=\"alert-danger\"><a href=\"#answers1-3\" data-toggle=\"collapse\">\n",
+    "    \n",
+    "**Correction (click to unhide):**</a><br>\n",
     "<div id=\"answers1-3\" class=\"collapse\">\n",
     "TODO\n",
     "</div>\n",
@@ -286,7 +294,9 @@
    "source": [
     "## Exercice 2:\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Question 2.1**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 2.1**<br>\n",
     "Plot a 1D graph of the Marginal Likelihood function for $l \\in [10^{-3},1.25]$ at $\\sigma_f$ fixed.\n",
     "</div>"
    ]
@@ -328,7 +338,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Question 2.2**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 2.2**<br>\n",
     "Optimize the Marginal Likelihood function to find $l^*$.<br>Watch out: some optimizers are gradient-based and only converge to a local optimum (try different initializations).\n",
     "</div>"
    ]
@@ -400,7 +412,9 @@
     "\n",
     "The `fun` function from section I will play the role of our \"expensive to evaluate function\".\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Question 3.1**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 3.1**<br>\n",
     "Build the GP model with a square exponential kernel with scikit-learn toolbox knowing $(x_{data}, y_{data})$.\n",
     "</div>"
    ]
@@ -467,7 +481,9 @@
     "\n",
     "Your challenge is: Minimize the $x \\mapsto x \\sin{(x)}$ function given a total computational budget of 10 points with the initial points $(x_{data},y_{data})$.\n",
     "\n",
-    "<div class=\"alert alert-warning\">**Question 4.1**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 4.1**<br>\n",
     "Give at least 2 methods to optimize the true function thanks to Gaussian Processes. You don't have to code it explicitly, just give the main idea.\n",
     "</div>"
    ]
@@ -483,7 +499,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert-danger\"><a href=\"#answers4-1\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div class=\"alert-danger\"><a href=\"#answers4-1\" data-toggle=\"collapse\">\n",
+    "    \n",
+    "**Correction (click to unhide):**</a><br>\n",
     "<div id=\"answers4-1\" class=\"collapse\">\n",
     "TODO\n",
     "</div>\n",
@@ -565,7 +583,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Question 5.1**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 5.1**<br>\n",
     "Implement the Expected Improvement function.\n",
     "</div>"
    ]
@@ -626,7 +646,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Question 5.2**<br>\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question 5.2**<br>\n",
     "Complete the code of the EGO method and compare it to other infill criteria.\n",
     "</div>"
    ]
@@ -752,7 +774,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
