--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 - correct backprop in ANN: make it clearer by better decomposition of reasoning, more drawings, first compute \nabla_\theta for the last layer and work my way back instead of the general formula, disambiguate i = component index and i = sample number.
 - add folder with images
 
+- include PyTorch introduction notebook in DL chapter
+
