update MDO part in GP class

--- a/1 - Unsupervized Learning/Unsupervized Learning.ipynb
+++ b/1 - Unsupervized Learning/Unsupervized Learning.ipynb
@@ -31,12 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T13:59:42.698507Z",
-     "start_time": "2018-10-09T13:59:38.669643Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
@@ -49,12 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:01:58.175578Z",
-     "start_time": "2018-10-09T14:01:57.493809Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -68,12 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:02:06.538928Z",
-     "start_time": "2018-10-09T14:02:06.530196Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boston_pca.explained_variance_ratio_"
@@ -82,12 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:02:22.661163Z",
-     "start_time": "2018-10-09T14:02:21.310267Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -99,12 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:03:14.649368Z",
-     "start_time": "2018-10-09T14:03:14.643864Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -115,12 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:03:30.847475Z",
-     "start_time": "2018-10-09T14:03:30.757144Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boston_pca = PCA(n_components=2)\n",
@@ -131,12 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:03:41.262609Z",
-     "start_time": "2018-10-09T14:03:41.259532Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_proj.shape"
@@ -145,12 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:03:56.960800Z",
-     "start_time": "2018-10-09T14:03:56.746369Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.scatter(X_proj[:,0],X_proj[:,1]);"
@@ -159,12 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:03:59.546036Z",
-     "start_time": "2018-10-09T14:03:59.542489Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boston_pca.components_"
@@ -180,12 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:07:47.026961Z",
-     "start_time": "2018-10-09T14:07:46.549862Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
@@ -196,12 +146,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:08:20.636085Z",
-     "start_time": "2018-10-09T14:08:20.449119Z"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston_kmeans2 = KMeans(n_clusters=2)\n",
+    "boston_kmeans2.fit(X)\n",
+    "y_pred  =boston_kmeans2.predict(X)\n",
+    "plt.scatter(X_proj[:,0], X_proj[:,1], c=y_pred);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = boston_kmeans.predict(X_proj)\n",
@@ -225,12 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:12:23.242850Z",
-     "start_time": "2018-10-09T14:12:23.102825Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
@@ -243,12 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:12:43.064330Z",
-     "start_time": "2018-10-09T14:12:43.053282Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boston_ocsvm.fit(X1)"
@@ -257,12 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:14:33.524160Z",
-     "start_time": "2018-10-09T14:14:32.202698Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "xmin = np.min(X1[:,0])\n",
@@ -282,12 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-09T14:15:24.069862Z",
-     "start_time": "2018-10-09T14:15:23.912117Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.contourf(xx, yy, Z)"
@@ -306,6 +243,29 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston_ocsvm = svm.OneClassSVM(gamma = 1e-3)\n",
+    "\n",
+    "boston_ocsvm.fit(X_proj)\n",
+    "\n",
+    "xmin = np.min(X_proj[:,0])\n",
+    "xmax = np.max(X_proj[:,0])\n",
+    "ymin = np.min(X_proj[:,1])\n",
+    "ymax = np.max(X_proj[:,1])\n",
+    "\n",
+    "xx, yy = np.meshgrid(np.linspace(xmin, xmax, 500), np.linspace(ymin, ymax, 500))\n",
+    "\n",
+    "Z = boston_ocsvm.decision_function(np.c_[xx.ravel(), yy.ravel()])\n",
+    "Z = Z.reshape(xx.shape)\n",
+    "\n",
+    "plt.contourf(xx, yy, Z, cmap=plt.cm.PuBu);"
+   ]
   },
   {
    "cell_type": "code",
@@ -331,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
