--- a/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
@@ -69,10 +69,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-22T08:52:30.192163Z",
-     "start_time": "2018-10-22T08:52:27.383571Z"
-    },
     "nbpresent": {
      "id": "66f910f5-e213-4475-9479-db956975fa33"
     }
@@ -83,7 +79,7 @@
     "%matplotlib inline\n",
     "#%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
-    "fig_size=(10, 10)\n",
+    "fig_size=(8, 8)\n",
     "\n",
     "res = np.loadtxt(\"sep_lin.csv\", delimiter=',')\n",
     "X = res[:,0:-1]\n",
@@ -116,10 +112,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-22T08:52:33.195069Z",
-     "start_time": "2018-10-22T08:52:32.907787Z"
-    },
     "nbpresent": {
      "id": "bacb254c-c598-4484-b12f-d9c3b9c3a1d0"
     }
@@ -185,10 +177,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-12-06T10:29:12.108817Z",
-     "start_time": "2018-12-06T10:29:12.087659Z"
-    },
     "nbpresent": {
      "id": "a077da5d-794e-45b6-8349-db14f8f26612"
     }
@@ -197,7 +185,14 @@
    "source": [
     "# %load solutions/code1.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "w = np.array([0.7, -1])\n",
+    "norm = np.linalg.norm(w)\n",
+    "w = w/norm\n",
+    "w0 = 0.4/norm\n",
+    "M = y*(np.dot(X,w) + w0)\n",
+    "print(\"margin =\", np.min(M))\n"
    ]
   },
   {
@@ -233,10 +228,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-22T08:53:25.430489Z",
-     "start_time": "2018-10-22T08:53:23.635288Z"
-    },
     "nbpresent": {
      "id": "a263ab46-84c6-44ee-b063-a2d86d75f4c5"
     }
@@ -245,7 +236,36 @@
    "source": [
     "# %load solutions/code2.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "import scipy.optimize as sopt\n",
+    "\n",
+    "def func(x):\n",
+    "    \"\"\"x = (M,w_1,w_2,b)\"\"\"\n",
+    "    return -x[0]\n",
+    "\n",
+    "def ineq_constr(x):\n",
+    "    \"\"\"x = (M,w_1,w_2,b)\"\"\"\n",
+    "    return y*(x[1]*X[:,0] + x[2]*X[:,1] + x[3]*np.ones(X.shape[0])) - x[0]*np.ones(X.shape[0])\n",
+    "\n",
+    "def eq_const(x):\n",
+    "    return x[1]*x[1]+x[2]*x[2]-1\n",
+    "\n",
+    "x0 = np.array([0.,0.7,-1.,0.4])\n",
+    "res = sopt.fmin_slsqp(func, x0, f_eqcons=eq_const, f_ieqcons=ineq_constr)\n",
+    "print(res)\n",
+    "print(\"margin =\", res[0])\n",
+    "fig=plt.figure(figsize=fig_size, dpi= 80, facecolor='w', edgecolor='k')\n",
+    "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
+    "plt.scatter(Xred[:,0],Xred[:,1],c='r')\n",
+    "XX = np.arange(-1.,12.,0.1)\n",
+    "YY = -(res[1]*XX+res[3])/res[2]\n",
+    "plt.plot(XX,YY,c='g')\n",
+    "YY = -(res[1]*XX+res[3]+res[0])/res[2]\n",
+    "plt.plot(XX,YY,'g--')\n",
+    "YY = -(res[1]*XX+res[3]-res[0])/res[2]\n",
+    "plt.plot(XX,YY,'g--');\n",
+    "\n"
    ]
   },
   {
@@ -301,10 +321,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-22T08:53:30.544490Z",
-     "start_time": "2018-10-22T08:53:30.250023Z"
-    },
     "nbpresent": {
      "id": "768b9afa-8f8b-4c20-bbf3-09b3dcb501aa"
     }
@@ -421,10 +437,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T08:20:33.118048Z",
-     "start_time": "2018-10-17T08:20:31.482565Z"
-    },
     "nbpresent": {
      "id": "47f522cf-664e-498b-850c-9410ab580ed6"
     }
@@ -560,10 +572,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T08:49:25.419343Z",
-     "start_time": "2018-10-17T08:49:24.452256Z"
-    },
     "nbpresent": {
      "id": "6dce34d9-ee79-4aaa-86c1-274cce55dec2"
     }
@@ -623,10 +631,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T08:57:21.294670Z",
-     "start_time": "2018-10-17T08:57:12.440094Z"
-    },
     "nbpresent": {
      "id": "e5ee8e83-c4af-4aba-a915-8282132cc5ac"
     }
@@ -663,10 +667,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T08:59:01.341792Z",
-     "start_time": "2018-10-17T08:59:01.042732Z"
-    },
     "nbpresent": {
      "id": "92964068-7386-49e4-8fe9-796899ee0576"
     }
@@ -726,10 +726,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T09:17:17.695024Z",
-     "start_time": "2018-10-17T09:17:17.458007Z"
-    },
     "nbpresent": {
      "id": "33109de0-9ac6-4138-8574-b26f067ac171"
     }
@@ -779,10 +775,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T09:19:28.668727Z",
-     "start_time": "2018-10-17T09:19:28.449960Z"
-    },
     "nbpresent": {
      "id": "d08cd339-291e-43cb-8689-0e83ee74843f"
     }
@@ -791,7 +783,39 @@
    "source": [
     "# %load solutions/code3.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "mySVC = svm.SVC(kernel='linear', C=1)\n",
+    "mySVC.fit(X,y)\n",
+    "\n",
+    "\n",
+    "# Compute margin and find support vectors\n",
+    "w = mySVC.coef_[0]\n",
+    "w0 = mySVC.intercept_\n",
+    "M = 1./np.linalg.norm(w)\n",
+    "print(\"SV per class:\", mySVC.n_support_)\n",
+    "print(\"w_i:\", w)\n",
+    "print(\"w_0:\", w0)\n",
+    "print(\"Margin:\", M)\n",
+    "print(\"w^T x0 + w_0:\", np.dot(w,mySVC.support_vectors_[0,:])+w0)\n",
+    "print(\"w^T x1 + w_0:\", np.dot(w,mySVC.support_vectors_[1,:])+w0)\n",
+    "print(\"w^T x2 + w_0:\", np.dot(w,mySVC.support_vectors_[2,:])+w0)\n",
+    "\n",
+    "# Plot the separating plane, the margin and the Support Vectors\n",
+    "fig=plt.figure(figsize=fig_size, dpi= 80, facecolor='w', edgecolor='k')\n",
+    "plt.scatter(Xblue[:,0],Xblue[:,1],c='b',s=20)\n",
+    "plt.scatter(Xred[:,0],Xred[:,1],c='r',s=20)\n",
+    "XX = np.arange(np.min(X[:,0]),np.max(X[:,0]),0.1)\n",
+    "#XX = np.arange(-1.,12.,0.1)\n",
+    "YY = -(w[0]*XX+w0)/w[1]\n",
+    "plt.plot(XX,YY,'g')\n",
+    "#YY = -(w[0]*XX+w0+M)/w[1]\n",
+    "#plt.plot(XX,YY,'g--')\n",
+    "#YY = -(w[0]*XX+w0-M)/w[1]\n",
+    "#plt.plot(XX,YY,'g--');\n",
+    "#plt.ylim(-6,10);\n",
+    "#plt.scatter(mySVC.support_vectors_[:,0], mySVC.support_vectors_[:,1], s=80, edgecolors='k', facecolors='none');\n",
+    "print(\"Training score:\", mySVC.score(X,y))\n"
    ]
   },
   {
@@ -896,10 +920,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T09:31:09.753023Z",
-     "start_time": "2018-10-17T09:31:09.608714Z"
-    },
     "nbpresent": {
      "id": "f25a5d30-b13b-4532-85bd-f61b89f8315e"
     }
@@ -931,10 +951,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T09:32:31.632506Z",
-     "start_time": "2018-10-17T09:32:31.436536Z"
-    },
     "nbpresent": {
      "id": "7547c3d6-ccd0-49cd-97a9-a92ccf7b20b2"
     }
@@ -1037,10 +1053,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T09:49:55.093983Z",
-     "start_time": "2018-10-17T09:49:54.017292Z"
-    },
     "nbpresent": {
      "id": "fa7dbe63-50b7-4b7b-881b-fc1128e18dcc"
     },
@@ -1092,10 +1104,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T09:52:15.819336Z",
-     "start_time": "2018-10-17T09:52:15.005358Z"
-    },
     "nbpresent": {
      "id": "e4dc7f1d-2d84-46bb-aa86-6571b3b7b9e9"
     },
@@ -1105,7 +1113,18 @@
    "source": [
     "# %load solutions/code4.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "res = np.loadtxt(\"sep_lin.csv\", delimiter=',')\n",
+    "X = res[:,0:-1]\n",
+    "y = res[:,-1].astype(int)\n",
+    "Xblue = X[y==-1]\n",
+    "Xred = X[y==1]\n",
+    "\n",
+    "mySVC = svm.SVC(kernel='rbf')\n",
+    "mySVC.fit(X,y)\n",
+    "print(\"SV per class:\", mySVC.n_support_)\n",
+    "plot_SVC(mySVC);\n"
    ]
   },
   {
@@ -1127,10 +1146,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T09:53:02.133194Z",
-     "start_time": "2018-10-17T09:53:01.427684Z"
-    },
     "nbpresent": {
      "id": "21e389bc-335d-4b93-aca8-0637b709b2df"
     },
@@ -1263,10 +1278,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:02:12.679567Z",
-     "start_time": "2018-10-17T10:02:03.325253Z"
-    },
     "nbpresent": {
      "id": "67bbc140-344b-4510-8635-72df3e783e70"
     }
@@ -1285,12 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:02:33.982004Z",
-     "start_time": "2018-10-17T10:02:33.978693Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -1301,10 +1307,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:03:45.317040Z",
-     "start_time": "2018-10-17T10:03:24.755376Z"
-    },
     "nbpresent": {
      "id": "9e414752-9438-46d7-b036-e2af3e670979"
     }
@@ -1330,12 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:04:12.020725Z",
-     "start_time": "2018-10-17T10:04:12.015341Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -1345,10 +1342,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:04:46.350671Z",
-     "start_time": "2018-10-17T10:04:38.228662Z"
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -1385,10 +1378,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:06:40.703495Z",
-     "start_time": "2018-10-17T10:06:40.034585Z"
-    },
     "nbpresent": {
      "id": "873f04f7-2a40-45f9-9a03-970f71cd5928"
     }
@@ -1405,10 +1394,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:07:10.059436Z",
-     "start_time": "2018-10-17T10:07:09.766838Z"
-    },
     "nbpresent": {
      "id": "bab94b21-0f19-4ab5-81c6-7601ced11400"
     }
@@ -1427,12 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:07:19.640336Z",
-     "start_time": "2018-10-17T10:07:19.634572Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
@@ -1443,12 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:07:34.804877Z",
-     "start_time": "2018-10-17T10:07:34.782525Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check some misclassified mails\n",
@@ -1474,10 +1449,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:10:18.743224Z",
-     "start_time": "2018-10-17T10:10:18.189234Z"
-    },
     "nbpresent": {
      "id": "b5946f3a-cce1-4138-af17-0fb2cb788f38"
     }
@@ -1518,10 +1489,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:11:18.693740Z",
-     "start_time": "2018-10-17T10:11:18.688943Z"
-    },
     "nbpresent": {
      "id": "428a56b4-f981-4118-8ce6-9147576f53e4"
     }
@@ -1541,10 +1508,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:11:22.397436Z",
-     "start_time": "2018-10-17T10:11:22.228400Z"
-    },
     "nbpresent": {
      "id": "7aee1580-4a5f-461d-9bdf-9632ae1da643"
     }
@@ -1565,10 +1528,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:11:54.633264Z",
-     "start_time": "2018-10-17T10:11:52.509255Z"
-    },
     "nbpresent": {
      "id": "55d61d0e-45a0-4442-9a27-6ac040e0c599"
     }
@@ -1591,10 +1550,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:11:56.588189Z",
-     "start_time": "2018-10-17T10:11:56.584335Z"
-    },
     "nbpresent": {
      "id": "b9942737-31dd-44c7-a08f-95f7a75a83f5"
     }
@@ -1616,10 +1571,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:12:08.684827Z",
-     "start_time": "2018-10-17T10:12:08.609525Z"
-    },
     "nbpresent": {
      "id": "51a0fedf-7c31-4527-a389-32d247fa89be"
     }
@@ -1639,10 +1590,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:12:12.929006Z",
-     "start_time": "2018-10-17T10:12:12.794657Z"
-    },
     "nbpresent": {
      "id": "c4d2ac07-1cf7-465f-9089-1b132459f980"
     }
@@ -1662,10 +1609,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:14:12.046022Z",
-     "start_time": "2018-10-17T10:14:11.982979Z"
-    },
     "nbpresent": {
      "id": "c7c0ae00-4061-4d28-a9da-419c4a11f21a"
     }
@@ -1684,12 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:14:15.171061Z",
-     "start_time": "2018-10-17T10:14:15.166600Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Confusion matrix:\")\n",
@@ -1700,10 +1638,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-10-17T10:16:02.591282Z",
-     "start_time": "2018-10-17T10:16:02.470133Z"
-    },
     "nbpresent": {
      "id": "4f03a16d-a638-444e-881f-cbb26eac5685"
     }
